panel overflow bug fixed

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -17,6 +17,7 @@
     box-shadow: -30px 0px 100px 0px #888;
     width:288px;
     z-index:1000;
+    overflow-x: hidden;
 }
 
 @media (max-width: 600px){
